add drizzle config, email from

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
+DATABASE_URL=your_database_url
 RESEND_API_KEY=your_resend_api_key
 OTP_SECRET=your_secure_random_secret
+EMAIL_FROM=your_email_from
