--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,11 @@
   },
   "linter": {
     "enabled": true,
-    "rules": {}
+    "rules": {
+      "style": {
+        "noNonNullAssertion": "off"
+      }
+    }
   },
   "formatter": {
     "enabled": true,
