--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@oslojs/otp": "^1.1.0",
+    "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.1",
     "hono": "^4.6.20",
     "pg": "^8.13.1",
